--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "sqlite3": "^5.1.6"
+    "better-sqlite3": "^9.3.0",
+    "open": "^8.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
