--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "express": "^4.18.2",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "better-sqlite3": "^9.3.0",
-    "open": "^8.4.2"
+    "open": "^8.4.2",
+    "officeparser": "^4.0.4",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {}
 }
