--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "better-sqlite3": "^9.3.0",
     "open": "^8.4.2",
     "officeparser": "^4.0.4",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.1",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {}
