--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "simple-chat-js",
+  "name": "simplechatjs",
   "version": "1.0.0",
   "description": "Simple chat with MCP support",
-  "main": "backend/server.js",
+  "author": "SimpleChatJS",
+  "main": "electron-main.js",
   "scripts": {
     "start": "node backend/server.js",
     "dev": "node backend/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "better-sqlite3": "^9.3.0",
-    "open": "^8.4.2",
-    "officeparser": "^4.0.4",
+    "express": "^4.18.2",
     "multer": "^2.0.1",
+    "officeparser": "^4.0.4",
+    "open": "^8.4.2",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {}
