--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "electron-main.js",
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "node backend/server.js"
+    "dev": "node backend/server.js",
+    "electron": "electron .",
+    "electron-dev": "electron . --dev"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
@@ -15,7 +17,8 @@
     "multer": "^2.0.1",
     "officeparser": "^4.0.4",
     "open": "^8.4.2",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "electron": "^32.0.0"
   },
   "devDependencies": {}
 }
